// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactFromMarkupContainer E2E tests Should rehydrate a basic component 1`] = `
"
      <div data-react-from-markup-container=\\"\\">
        <span testid=\\"myComponent\\">rehydrated component</span>
      </div>"
`;

exports[`reactFromMarkupContainer E2E tests Should rehydrate valid HTML markup 1`] = `
"
    <div data-react-from-markup-container=\\"\\">
      <p style=\\"\\">paragraph</p>
      <p>paragraph</p>
      <p>paragraph</p>
      <p>paragraph</p>
      <p dangerouslysetinnerhtml=\\"{__html:'should not be children'}\\"></p>
    </div>"
`;
